--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div>
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+        <div>
+            <p>You: <span class="player-score">0</span></p>
+            <p>Computer: <span class="computer-score">0</span></p>
+        </div>
+        <div class="result"></div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
